# RecoilEngine

AI/Wrappers/DotNet/: Architecture.md  BarIntegration.md  CMakeLists.txt  DATA_ORIENTED_UPDATES.md  F#-First-Architecture.md  FSharp-DataOriented-Architecture.md  FSharp-Recoil-Wrapper-Design.md  FSharpConsiderations.md  IMPLEMENTATION_PLAN.md  QUICK_START_GUIDE.md  README.md  Warning.md  architecture.md  barIntegration.md
AI/Wrappers/DotNet/FSharp-BAR-AI/: README.md
AI/Wrappers/DotNet/FSharp-BAR-AI/examples/: ActivePatterns.fs  GameCallback.fs
AI/Wrappers/DotNet/FSharp-BAR-AI/src/: BAR.AI.FSharp.fsproj
AI/Wrappers/DotNet/FSharp-Recoil-Wrapper/: README.md  README_PINVOKE.md
AI/Wrappers/DotNet/FSharp-Recoil-Wrapper/examples/: BasicAI.fs  DataOrientedExample.fs  DataOrientedExample.fsproj  RecoilAI.Examples.fsproj
AI/Wrappers/DotNet/FSharp-Recoil-Wrapper/native/: CMakeLists.txt  README.md  SpringAIWrapperExports.cpp  SpringAIWrapperInterface.cpp  SpringAIWrapperInterface.h  build.cmd  build.sh  test_wrapper.cpp
AI/Wrappers/DotNet/FSharp-Recoil-Wrapper/src/: Commands.fs  GameContext.fs  Interop.fs  RecoilAI.Core.fsproj  SimpleCommands.fs  SpringAI.Core.fsproj  Types.fs
AI/Wrappers/DotNet/FSharp-Recoil-Wrapper/test/: InteropTests.fs  MockInterop.fs  RecoilAI.Tests.fsproj  SimpleMockInterop.fs  SpringAI.Tests.fsproj  TestRunner.fs
AI/Wrappers/DotNet/examples/: ExampleDotNetAI.cs  FSharpAI.fs
AI/Wrappers/DotNet/examples/CSharp/: ExampleCSharpAI.cs
AI/Wrappers/DotNet/examples/FSharp/: BAR.AI.FSharp.Example.fsproj  ExampleAI.fs  Types.fs
AI/Wrappers/DotNet/src/csharp-compat/: SpringAI.CSharp.csproj
AI/Wrappers/DotNet/src/csharp-compat/AI/: CSharpAIAdapter.cs  ICSharpAI.cs
AI/Wrappers/DotNet/src/csharp-compat/Commands/: CSharpCommand.cs
AI/Wrappers/DotNet/src/csharp-compat/Compatibility/: TypeConverters.cs
AI/Wrappers/DotNet/src/csharp-compat/Events/: CSharpEvents.cs
AI/Wrappers/DotNet/src/fsharp-core/: AI.fs  GameContext.fs  Interop.fs  Types.fs
AI/Wrappers/DotNet/src/managed/: SpringAI.Wrapper.csproj
AI/Wrappers/DotNet/src/managed/AI/: IAI.cs  IGameCallback.cs
AI/Wrappers/DotNet/src/managed/Events/: AIEvents.cs
AI/Wrappers/DotNet/src/managed/Interop/: NativeMethods.cs
AI/Wrappers/DotNet/src/native/: DotNetExport.cpp  SpringAIWrapperExports.cpp  SpringAIWrapperInterface.h
